:pushpin: migrate to older version of java